# librarian-base-v1

./: .gitignore  README.md  cuda_check.py  pyproject.toml  train.py
configs/: load_configs.py  model.json  model_130M.json  model_390M.json  model_config.py  train.json  train_130M.json  train_390M.json  train_config.py
scripts/: infer.ps1  run_chat.py  run_infer.py  sanity_check.py  train.ps1  train.sh
src/data/: clean.py  dataset.py  download.py  pack.py  tokenizer.py
src/evaluation/: eval_runner.py  evaluator.py  perplexity.py
src/inference/: chat.py  generate.py  genrate.py  load_model.py  sampler.py
src/model/: attention.py  block.py  gpt.py  lora.py  mlp.py  rmsnorm.py  rope.py
src/pipeline/: atomic_writer.py  cleanup.py  manifest.py  pipeline.py
src/training/: checkpoint.py  optimizer.py  scheduler.py  trainer.py
src/utils/: logging.py
tokenizer/: evaluate_tokenizer.py  tokenizer.json  tokenizer_config.json  train_tokenizer.py
