[project]
name = "librarian-base-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.6",
    "datasets>=4.6.0",
    "numpy>=2.4.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "tensorboard>=2.20.0",
    "setuptools>=82.0.1",
    "dotenv>=0.9.9",
]
